--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,14 +8,9 @@
   <title>Kabale Chamber of Commerce | Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/styles.css" />
-  <style>
-    body {
-      background-image: url('images/home-bg.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-  </style>
+  <!-- Logo for social and browser (optional, can be removed if not needed) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/logo.png" />
+  <meta property="og:image" content="images/logo.png" />
 </head>
 <body>
   <header>
