--- a/chamber/siteplan.html
+++ b/chamber/siteplan.html
@@ -3,79 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Plan - Eco Green</title>
+    <title>Eco Green Site Plan</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Site Plan: Eco Green</h1>
-    
-    <section>
-        <h2>Site Name</h2>
-        <p><strong>Eco Green</strong></p>
-        <p>This name reflects the website's mission to promote sustainable living, eco-friendly products, and green lifestyle education. It’s short, memorable, and directly aligned with the site's values.</p>
-        <p>Potential domain: ecogreenlife.org</p>
-    </section>
+    <header>
+        <h1>Eco Green Site Plan</h1>
+    </header>
 
-    <section>
-        <h2>Site Purpose</h2>
-        <p>Eco Green serves as a central resource for individuals interested in living sustainably. The website will offer eco-tips, DIY green projects, recommended eco-friendly products, news on environmental issues, and a blog for ongoing education and inspiration.</p>
-    </section>
+    <main>
+        <section aria-labelledby="site-name">
+            <h2 id="site-name">Site Name</h2>
+            <p><strong>Eco Green</strong></p>
+            <p></p>
+                The name reflects the mission to promote sustainable living, eco-friendly products, and green lifestyle education. It’s short, memorable, and aligned with the site's values.
+            </p>
+            <p><strong>Potential domain:</strong> ecogreenlife.org</p>
+        </section>
 
-    <section>
-        <h2>Scenarios</h2>
-        <div class="scenario">"What are some beginner-friendly tips for reducing plastic use at home?"</div>
-        <div class="scenario">"Where can I find verified eco-friendly brands or product suggestions?"</div>
-    </section>
+        <section aria-labelledby="site-purpose">
+            <h2 id="site-purpose">Site Purpose</h2>
+            <p>
+                Eco Green is a central resource for individuals interested in sustainable living. The site offers eco-tips, DIY green projects, recommended eco-friendly products, environmental news, and a blog for ongoing education and inspiration.
+            </p>
+        </section>
 
-    <section>
-        <h2>Color Schema</h2>
-        <div class="color-sample" style="background-color: #2d6a4f;"></div> <p>Primary Color - Forest Green (#2d6a4f): Used for headers, buttons, and navigation elements.</p>
-        <div class="color-sample" style="background-color: #52b788;"></div> <p>Accent Color - Mint Green (#52b788): Used for highlights, links, and icons to give a fresh, natural tone.</p>
-    </section>
+        <section aria-labelledby="scenarios">
+            <h2 id="scenarios">Scenarios</h2>
+            <ul>
+                <li>What are some beginner-friendly tips for reducing plastic use at home?</li>
+                <li>Where can I find verified eco-friendly brands or product suggestions?</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>Typography</h2>
-        <h3>Merriweather</h3>
-        <p>Used for headings and navigation elements. Elegant and strong for titles and major headings.</p>
-        <h3>Open Sans</h3>
-        <p>Used for body text and general content. Clean and readable for general content and blog posts.</p>
-    </section>
+        <section aria-labelledby="color-schema">
+            <h2 id="color-schema">Color Schema</h2>
+            <ul>
+                <li>
+                    <span class="color-sample" style="background-color: #2d6a4f; display:inline-block; width:1em; height:1em; vertical-align:middle; margin-right:0.5em;"></span>
+                    <strong>Forest Green (#2d6a4f):</strong> Primary color for headers, buttons, and navigation.
+                </li>
+                <li>
+                    <span class="color-sample" style="background-color: #52b788; display:inline-block; width:1em; height:1em; vertical-align:middle; margin-right:0.5em;"></span>
+                    <strong>Mint Green (#52b788):</strong> Accent color for highlights, links, and icons.
+                </li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>Wireframes</h2>
-        <div class="wireframe-container">
-            <div class="wireframe">
-                <h3>Mobile View</h3>
-                <ul>
-                    <li>Header with logo and menu icon</li>
-                    <li>Hero image with welcome text and CTA</li>
-                    <li>Sections stacked vertically:
-                        <ul>
-                            <li>Intro/About</li>
-                            <li>Featured blog posts</li>
-                            <li>Product highlights</li>
-                            <li>Newsletter signup</li>
-                        </ul>
-                    </li>
-                    <li>Footer with contact links and socials</li>
-                </ul>
+        <section aria-labelledby="typography">
+            <h2 id="typography">Typography</h2>
+            <ul>
+                <li>
+                    <strong>Merriweather:</strong> For headings and navigation. Elegant and strong for titles.
+                </li>
+                <li>
+                    <strong>Open Sans:</strong> For body text. Clean and readable for general content and blog posts.
+                </li>
+            </ul>
+        </section>
+
+        <section aria-labelledby="wireframes">
+            <h2 id="wireframes">Wireframes</h2>
+            <div class="wireframe-container">
+                <article>
+                    <h3>Mobile View</h3>
+                    <ul>
+                        <li>Header with logo and menu icon</li>
+                        <li>Hero image with welcome text and CTA</li>
+                        <li>Sections stacked vertically:
+                            <ul>
+                                <li>Intro/About</li>
+                                <li>Featured blog posts</li>
+                                <li>Product highlights</li>
+                                <li>Newsletter signup</li>
+                            </ul>
+                        </li>
+                        <li>Footer with contact links and socials</li>
+                    </ul>
+                </article>
+                <article>
+                    <h3>Desktop View</h3>
+                    <ul>
+                        <li>Header with full nav bar and logo</li>
+                        <li>Full-width hero section with green-themed background and text overlay</li>
+                        <li>Three-column layout:
+                            <ul>
+                                <li>Main articles/blog section</li>
+                                <li>Sidebar with quick tips and recent posts</li>
+                                <li>Product showcase or eco-news</li>
+                            </ul>
+                        </li>
+                        <li>Footer with sitemap and newsletter form</li>
+                    </ul>
+                </article>
             </div>
-            <div class="wireframe">
-                <h3>Desktop View</h3>
-                <ul>
-                    <li>Header with full nav bar and logo</li>
-                    <li>Full-width hero section with green-themed background and text overlay</li>
-                    <li>Three-column layout:
-                        <ul>
-                            <li>Main articles/blog section</li>
-                            <li>Sidebar with quick tips and recent posts</li>
-                            <li>Product showcase or eco-news</li>
-                        </ul>
-                    </li>
-                    <li>Footer with sitemap and newsletter form</li>
-                </ul>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
 </html>
