--- a/final/index.html
+++ b/final/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="images/og-image.jpg" />
   <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/" />
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <title>Eco Green | Home</title>
 </head>
 <body>
@@ -26,11 +26,11 @@
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1>Welcome to Eco Green</h1>
-      <p>Your guide to a sustainable lifestyle</p>
-      <a href="products.html" class="cta-button">Explore Products</a>
+<main>
+    <section class="hero" style="background-image: url('images/hero.jpg'); background-size: cover; background-position: center; color: #fff; padding: 4rem 2rem; text-align: center;">
+        <h1>Welcome to Eco Green</h1>
+        <p>Your guide to a sustainable lifestyle</p>
+        <a href="products.html" class="cta-button">Explore Products</a>
     </section>
 
     <section class="about">
@@ -69,6 +69,6 @@
     <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
   </footer>
 
-  <script src="main.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
