--- a/final/attributions.html
+++ b/final/attributions.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Attributions for Eco Green website content and resources." />
   <meta name="author" content="Your Name" />
   <title>Attributions | Eco Green</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
@@ -38,6 +38,6 @@
     <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
   </footer>
 
-  <script src="main.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
