--- a/final/blog.html
+++ b/final/blog.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="images/og-image.jpg" />
   <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/blog.html" />
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <title>Eco Green | Blog</title>
 </head>
 <body>
@@ -65,6 +65,6 @@
     <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
   </footer>
 
-  <script src="main.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
