--- a/final/form_handler.html
+++ b/final/form_handler.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Newsletter signup confirmation for Eco Green." />
   <meta name="author" content="Your Name" />
   <title>Subscription Confirmed | Eco Green</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
@@ -33,6 +33,6 @@
     <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
   </footer>
 
-  <script src="main.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
