--- a/final/attributions.html
+++ b/final/attributions.html
@@ -24,12 +24,14 @@
   <main class="attributions">
     <h1>Resource Attributions</h1>
     <ul>
-      <li>Hero Image: Photo by <a href="https://unsplash.com/@danielp" target="_blank">Daniel P.</a> on Unsplash</li>
-      <li>Product Data: Adapted from <a href="https://fakestoreapi.com/" target="_blank">FakeStore API</a></li>
-      <li>Icons: Sourced from <a href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
-      <li>Blog content inspired by: <a href="https://www.earthday.org" target="_blank">EarthDay.org</a> and <a href="https://sustainablejungle.com" target="_blank">Sustainable Jungle</a></li>
+      <li>Hero Image: Photo by <a href="https://unsplash.com/@andre" target="_blank" rel="noopener">Andre s.</a> on Unsplash</li>
+      <li>Product Data: Adapted from <a href="https://feapi.com/" target="_blank" rel="noopener">Fe API</a></li>
+      <li>Icons: Sourced from <a href="https://fontawesome.com/" target="_blank" rel="noopener">Font Awesome</a></li>
+      <li>Blog content inspired by: <a href="https://www.earthday.org" target="_blank" rel="noopener">EarthDay.org</a> and <a href="https://sustainablejungle.com" target="_blank" rel="noopener">Sustainable Jungle</a></li>
+      <li>Background Patterns: From <a href="https://www.toptal.com/designers/subtlepatterns/" target="_blank" rel="noopener">Subtle Patterns</a></li>
+      <li>Logo Font: <a href="https://fonts.google.com/specimen/Poppins" target="_blank" rel="noopener">Poppins</a> by Google Fonts</li>
     </ul>
-    <p>If any additional content was sourced, it has been cited appropriately throughout the site.</p>
+    <p>All resources are used under their respective licenses. Additional attributions are provided where required throughout the site.</p>
   </main>
 
   <footer>
