--- a/final/index.html
+++ b/final/index.html
@@ -1,74 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Eco Green promotes sustainable living with eco-friendly tips, products, and education." />
-  <meta name="author" content="Your Name" />
-  <meta property="og:title" content="Eco Green" />
-  <meta property="og:description" content="Explore eco-tips, green projects, and sustainable products on Eco Green." />
-  <meta property="og:image" content="images/og-image.jpg" />
-  <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/" />
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="css/styles.css" />
-  <title>Eco Green | Home</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Eco Green promotes sustainable living with eco-friendly tips, products, and education." />
+    <meta name="author" content="Ssemanda Andrew Allan" />
+    <meta property="og:title" content="Eco Green" />
+    <meta property="og:description" content="Explore eco-tips, green projects, and sustainable products on Eco Green." />
+    <meta property="og:image" content="images/og-image.jpg" />
+    <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Eco Green | Home</title>
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">Eco Green</a>
-      <button id="menu-toggle">☰</button>
-      <ul id="nav-links" class="hidden">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="blog.html">Blog</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav class="navbar" aria-label="Main navigation">
+            <a href="index.html" class="logo" aria-label="Eco Green Home">Eco Green</a>
+            <button id="menu-toggle" aria-controls="nav-links" aria-expanded="false" aria-label="Toggle navigation menu">☰</button>
+            <ul id="nav-links" class="hidden">
+                <li><a href="index.html" aria-current="page">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section class="hero" style="background-image: url('images/hero.jpg'); background-size: cover; background-position: center; color: #fff; padding: 4rem 2rem; text-align: center;">
-        <h1>Welcome to Eco Green</h1>
-        <p>Your guide to a sustainable lifestyle</p>
-        <a href="products.html" class="cta-button">Explore Products</a>
-    </section>
+    <main>
+        <section class="hero" style="background-image: url('images/hero.jpg'); background-size: cover; background-position: center; color: #fff; padding: 4rem 2rem; text-align: center;">
+            <h1>Welcome to Eco Green</h1>
+            <p>Your guide to a sustainable lifestyle</p>
+            <a href="products.html" class="cta-button">Explore Products</a>
+        </section>
 
-    <section class="about">
-      <h2>About Us</h2>
-      <p>Eco Green empowers individuals and communities to live sustainably through education, eco-friendly product recommendations, and DIY green projects.</p>
-    </section>
+        <section class="about">
+            <h2>About Us</h2>
+            <p>Eco Green empowers individuals and communities to live sustainably through education, eco-friendly product recommendations, and DIY green projects.</p>
+            <a href="about.html" class="learn-more">Learn More</a>
+        </section>
 
-    <section class="features grid">
-      <div class="card">
-        <h3>Eco Tips</h3>
-        <p>Simple actions you can take to reduce your carbon footprint and make your home greener.</p>
-      </div>
-      <div class="card">
-        <h3>DIY Projects</h3>
-        <p>Fun and educational do-it-yourself projects for kids and adults to reuse and recycle creatively.</p>
-      </div>
-      <div class="card">
-        <h3>Trusted Brands</h3>
-        <p>Discover vetted eco-friendly brands that align with our environmental standards.</p>
-      </div>
-    </section>
+        <section class="features grid">
+            <article class="card">
+                <h3>Eco Tips</h3>
+                <p>Simple actions you can take to reduce your carbon footprint and make your home greener.</p>
+                <a href="eco-tips.html" class="feature-link">Read Tips</a>
+            </article>
+                <blockquote>
+                    <p>"Eco Green helped me make my home more sustainable!"</p>
+                    <footer>- Ssemanda Andrew Allan</footer>
+                </blockquote>
+                <blockquote>
+                    <p>"The DIY projects are fun for the whole family."</p>
+                    <footer>- Ssemanda Andrew Allan</footer>
+                </blockquote>
+            </div>
+        </section>
 
-    <section class="newsletter">
-      <h2>Subscribe to Our Newsletter</h2>
-      <form action="form-response.html" method="get">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required />
-        <button type="submit">Subscribe</button>
-      </form>
-    </section>
-  </main>
+        <section class="newsletter">
+            <h2>Subscribe to Our Newsletter</h2>
+            <form action="form-response.html" method="get" autocomplete="off">
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" required />
+                <button type="submit">Subscribe</button>
+            </form>
+        </section>
+    </main>
 
-  <footer>
-    <p>&copy; 2025 Eco Green. All rights reserved.</p>
-    <a href="attributions.html">Attributions</a> |
-    <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
-  </footer>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 Eco Green. All rights reserved.</p>
+            <nav aria-label="Footer navigation">
+                <a href="attributions.html">Attributions</a> |
+                <a href="https://youtube.com/yourvideo" target="_blank" rel="noopener">Video Demo</a> |
+                <a href="privacy.html">Privacy Policy</a>
+            </nav>
+        </div>
+    </footer>
 
-  <script src="js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
