--- a/final/blog.html
+++ b/final/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Eco Green Blog - Read inspiring stories, eco news, and sustainable living tips." />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Ssemanda Andrew Allan" />
   <meta property="og:title" content="Eco Green Blog" />
   <meta property="og:description" content="Explore our blog for environmental tips, green ideas, and sustainable education." />
   <meta property="og:image" content="images/og-image.jpg" />
@@ -65,6 +65,6 @@
     <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
   </footer>
 
-  <script src="js/main.js" type="module"></script>
+  <script src="js/blog.js" type="module"></script>
 </body>
 </html>
