--- a/final/index.html
+++ b/final/index.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html" aria-current="page">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="form-response.html">form-response</a></li>
             </ul>
         </nav>
     </header>
@@ -37,13 +37,15 @@
         <section class="about">
             <h2>About Us</h2>
             <p>Eco Green empowers individuals and communities to live sustainably through education, eco-friendly product recommendations, and DIY green projects.</p>
-            <a href="about.html" class="learn-more">Learn More</a>
+            <p>Our mission is to inspire a greener future by providing practical tips and resources for reducing your carbon footprint.</p>
         </section>
 
         <section class="features grid">
             <article class="card">
                 <h3>Eco Tips</h3>
                 <p>Simple actions you can take to reduce your carbon footprint and make your home greener.</p>
+                <p>Discover practical tips and resources for sustainable living.</p>
+                <p>Learn how to create a more eco-friendly home with our expert advice.</p>
                 <a href="eco-tips.html" class="feature-link">Read Tips</a>
             </article>
                 <blockquote>
@@ -52,7 +54,7 @@
                 </blockquote>
                 <blockquote>
                     <p>"The DIY projects are fun for the whole family."</p>
-                    <footer>- Ssemanda Andrew Allan</footer>
+                    <footer>-  Andre Wallan</footer>
                 </blockquote>
             </div>
         </section>
