--- a/final/form-response.html
+++ b/final/form-response.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Newsletter signup confirmation for Eco Green." />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Ssemanda Andrew Allan" />
   <title>Subscription Confirmed | Eco Green</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -33,6 +33,6 @@
     <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
   </footer>
 
-  <script src="js/main.js" type="module"></script>
+  <script src="js/form-response.js" type="module"></script>
 </body>
 </html>
