--- a/final/products.html
+++ b/final/products.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="favicon/favicon.ico">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
-  <script type="module" src="js/main.js" defer></script>
+  <script type="module" src="js/products.js" defer></script>
 </head>
 <body>
   <header>
