--- a/final/blog.html
+++ b/final/blog.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
       <a href="index.html" class="logo">Eco Green</a>
       <button id="menu-toggle">☰</button>
-      <ul id="nav-links" class="hidden">
+      <ul id="nav-links" class="open">
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="blog.html">Blog</a></li>
