--- a/final/index.html
+++ b/final/index.html
@@ -46,7 +46,7 @@
                 <p>Simple actions you can take to reduce your carbon footprint and make your home greener.</p>
                 <p>Discover practical tips and resources for sustainable living.</p>
                 <p>Learn how to create a more eco-friendly home with our expert advice.</p>
-                <a href="tips.json" class="tips">Read Tips</a>
+                <a href="tips.json" class="testimonials">Read Tips</a>
             </article>
             <div class="testimonials">
                 <blockquote>
