--- a/final/blog.html
+++ b/final/blog.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Explore our blog for environmental tips, green ideas, and sustainable education." />
   <meta property="og:image" content="images/og-image.jpg" />
   <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/blog.html" />
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/styles.css" />
   <title>Eco Green | Blog</title>
 </head>
