--- a/final/products.html
+++ b/final/products.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Eco Green's curated selection of eco-friendly products.">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Ssemanda Andrew Allan">
   <meta property="og:title" content="Eco Green Products">
   <meta property="og:description" content="Explore sustainable products for everyday life.">
   <title>Eco Green | Products</title>
@@ -29,7 +29,30 @@
   <main>
     <h1>Eco-Friendly Products</h1>
     <div id="products-container" class="grid"></div>
-
+<div class="product-card">
+  <img src="images/bags.jpg" alt="Eco-Friendly Bags">
+  <h3>Eco-Friendly Bags</h3>
+  <p>Durable and reusable bags for shopping.</p>
+  <button class="view-details">View Details</button>
+</div>
+    <div class="product-card">
+      <img src="images/baskets.jpg" alt="Eco-Friendly Baskets">
+      <h3>Eco-Friendly Baskets</h3>
+      <p>Stylish and sustainable baskets for storage.</p>
+      <button class="view-details">View Details</button>
+    </div>
+    <div class="product-card">
+      <img src="images/decor.jpg" alt="Product Name">
+      <h3>Product Name</h3>
+      <p>Short description...</p>
+      <button class="view-details">View Details</button>
+    </div>
+    <div class="product-card">
+      <img src="images/crafts.jpg" alt="Eco-Friendly Crafts">
+      <h3>Eco-Friendly Crafts</h3>
+      <p>Creative DIY projects using sustainable materials.</p>
+      <button class="view-details">View Details</button>
+    </div>
     <div id="product-modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="modal-title">
       <div class="modal-content">
         <button id="modal-close" aria-label="Close modal">&times;</button>
