--- a/final/attributions.html
+++ b/final/attributions.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Attributions for Eco Green website content and resources." />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Ssemanda Andrew Allan" />
   <title>Attributions | Eco Green</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
