--- a/final/products.html
+++ b/final/products.html
@@ -42,9 +42,9 @@
       <button class="view-details">View Details</button>
     </div>
     <div class="product-card">
-      <img src="images/decor.jpg" alt="Product Name">
-      <h3>Product Name</h3>
-      <p>Short description...</p>
+      <img src="images/deco.jpg" alt="Eco-Friendly Decor">
+      <h3>Eco-Friendly Decor</h3>
+      <p>Stylish decor items made from sustainable materials.</p>
       <button class="view-details">View Details</button>
     </div>
     <div class="product-card">
