--- a/final/index.html
+++ b/final/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Eco Green promotes sustainable living with eco-friendly tips, products, and education." />
     <meta name="author" content="Ssemanda Andrew Allan" />
-    <meta property="og:title" content="Eco Green" />
     <meta property="og:description" content="Explore eco-tips, green projects, and sustainable products on Eco Green." />
-    <meta property="og:image" content="images/og-image.jpg" />
+    <meta property="og:image" content="images/logo.jpg" />
     <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/" />
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
