--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar" aria-label="Main navigation">
-            <a href="index.html" class="logo" aria-label="Eco Green Home">Eco Green</a>
+            <img src="images/logo.jpg" alt="Eco Green Logo">
             <button id="menu-toggle" aria-controls="nav-links" aria-expanded="false" aria-label="Toggle navigation menu">☰</button>
             <ul id="nav-links" class="nav-links open">
                 <li><a href="index.html" aria-current="page">Home</a></li>
