--- a/final/index.html
+++ b/final/index.html
@@ -91,7 +91,7 @@
             <p>&copy; 2025 Eco Green. All rights reserved.</p>
             <nav aria-label="Footer navigation">
                 <a href="attributions.html">Attributions</a> |
-                <a href="https://youtube.com/yourvideo" target="_blank" rel="noopener">Video Demo</a> |
+                <a href="https://youtube.com/video" target="_blank" rel="noopener">Video Demo</a> |
             </nav>
         </div>
     </footer>
