--- a/final/index.html
+++ b/final/index.html
@@ -91,7 +91,7 @@
             <p>&copy; 2025 Eco Green. All rights reserved.</p>
             <nav aria-label="Footer navigation">
                 <a href="attributions.html">Attributions</a> |
-                <a href="https://youtube.com/video" target="_blank" rel="noopener">Video Demo</a> |
+                <a href="https://www.loom.com/share/981918e6829c4542b4dabdf60d7b9696?sid=d202f36d-2214-4722-9bfc-d7d6a922b881" target="_blank" rel="noopener">Video Demo</a> |
             </nav>
         </div>
     </footer>
