--- a/final/products.html
+++ b/final/products.html
@@ -67,7 +67,7 @@
   <footer>
     <p>&copy; 2025 Eco Green</p>
     <a href="attributions.html">Attributions</a> |
-    <a href="https://yourvideo.link" target="_blank">Project Video</a>
+    <a href="https://www.loom.com/share/981918e6829c4542b4dabdf60d7b9696?sid=d202f36d-2214-4722-9bfc-d7d6a922b881" target="_blank">Project Video</a>
   </footer>
 </body>
 </html>
