--- a/final/form-response.html
+++ b/final/form-response.html
@@ -30,7 +30,7 @@
   <footer>
     <p>&copy; 2025 Eco Green. All rights reserved.</p>
     <a href="attributions.html">Attributions</a> |
-    <a href="https://youtube.com/yourvideo" target="_blank">Video Demo</a>
+    <a href="https://www.loom.com/share/981918e6829c4542b4dabdf60d7b9696?sid=d202f36d-2214-4722-9bfc-d7d6a922b881" target="_blank">Video Demo</a>
   </footer>
 
   <script src="js/form-response.js" type="module"></script>
