--- a/final/form-response.html
+++ b/final/form-response.html
@@ -25,6 +25,11 @@
     <h1>Thank You for Subscribing!</h1>
     <p>You've successfully joined the Eco Green newsletter. Stay tuned for updates, green tips, and more.</p>
     <a href="index.html" class="cta-button">Return Home</a>
+    <form id="newsletter-form" action="form-response.html" method="get" autocomplete="on">
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email" required />
+    <button type="submit">Subscribe</button>
+</form>
   </main>
 
   <footer>
