--- a/final/index.html
+++ b/final/index.html
@@ -1,111 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Eco Green promotes sustainable living with eco-friendly tips, products, and education." />
-    <meta name="author" content="Ssemanda Andrew Allan" />
-    <meta property="og:description" content="Explore eco-tips, green projects, and sustainable products on Eco Green." />
-    <meta property="og:image" content="images/logo.jpg" />
-    <meta property="og:url" content="https://yourgithub.github.io/wdd231/final/" />
-    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Eco Green | Home</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar" aria-label="Main navigation">
-            <img src="images/logo.jpg" alt="Eco Green Logo">
-            <button id="menu-toggle" aria-controls="nav-links" aria-expanded="false" aria-label="Toggle navigation menu">☰</button>
-            <ul id="nav-links" class="nav-links open">
-                <li><a href="index.html" aria-current="page">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="form-response.html">Form Response</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero" style="background-image: url('images/hero.jpg'); background-size: cover; background-position: center; color: #fff; padding: 4rem 2rem; text-align: center;">
-            <h1>Welcome to Eco Green</h1>
-            <p>Your guide to a sustainable lifestyle</p>
-            <a href="products.html" class="cta-button">Explore Products</a>
-        </section>
-
-        <section class="about">
-            <h2>About Us</h2>
-            <p>Eco Green empowers individuals and communities to live sustainably through education, eco-friendly product recommendations, and DIY green projects.</p>
-            <p>Our mission is to inspire a greener future by providing practical tips and resources for reducing your carbon footprint.</p>
-        </section>
-
-        <section class="features grid">
-            <article class="card">
-                <h3>Eco Tips</h3>
-                <p>Simple actions you can take to reduce your carbon footprint and make your home greener.</p>
-                <p>Discover practical tips and resources for sustainable living.</p>
-                <p>Learn how to create a more eco-friendly home with our expert advice.</p>
-            </article>
-            <div class="testimonials">
-                <blockquote>
-                    <p>"Eco Green helped me make my home more sustainable!"</p>
-                    <footer>- Ssemanda Allan</footer>
-                </blockquote>
-                <blockquote>
-                    <p>"The DIY projects are fun for the whole family."</p>
-                    <footer>- Andre Wallan</footer>
-                </blockquote>
-            </div>
-        </section>
-
-<section class="tips-list-section">
-    <h2>Tips</h2>
-    <ul id="tips-list"></ul>
-</section>
-<script>
-    fetch('data/tips.json')
-        .then(response => response.json())
-        .then(data => {
-            const list = document.getElementById('tips-list');
-            data.forEach(tip => {
-                const li = document.createElement('li');
-                li.textContent = tip.tip;
-                list.appendChild(li);
-            });
-        })
-        .catch(error => console.error('Error loading JSON:', error));
-</script>
-
-        <section class="newsletter">
-            <h2>Subscribe to Our Newsletter</h2>
-            <form action="form-response.html" method="get" autocomplete="off">
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" required />
-                <button type="submit">Subscribe</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 Eco Green. All rights reserved.</p>
-            <nav aria-label="Footer navigation">
-                <a href="attributions.html">Attributions</a> |
-                <a href="https://www.loom.com/share/981918e6829c4542b4dabdf60d7b9696?sid=d202f36d-2214-4722-9bfc-d7d6a922b881" target="_blank" rel="noopener">Video Demo</a> |
-            </nav>
-        </div>
-    </footer>
-
-    <script>
-        // Responsive menu toggle
-        const menuToggle = document.getElementById('menu-toggle');
-        const navLinks = document.getElementById('nav-links');
-        menuToggle.addEventListener('click', () => {
-            const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
-            menuToggle.setAttribute('aria-expanded', !expanded);
-            navLinks.classList.toggle('open');
-        });
-    </script>
-    <script src="js/main.js" type="module"></script>
-</body>
-</html>
+<form id="newsletter-form" action="form-response.html" method="get" autocomplete="off">
+    <label for="email">Email:</label>
+    <input type="email" name="email" id="email" required />
+    <button type="submit">Subscribe</button>
+</form>
